css, image config

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,8 +9,8 @@
     <title>G-SoluTech</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/images/gsolutech.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="shortcut icon" href="../images/gsolutech.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../stylesheets/main.css">
 </head>
 <body class="font-sans antialiased">
     <!-- Hero Header -->
@@ -40,11 +40,11 @@
         </div>
 
         <div class="flex justify-center gap-8 py-8">
-            <img src="/images/Microsoft-logo_rgb_c-gray 1.png" alt="Logo Microsoft" class="h-10">
-            <img src="/images/logo-facebook-transparent 1.png" alt="Logo Facebook" class="h-10">
-            <img src="/images/pinterest 1.png" alt="Logo Pinterest" class="h-10">
-            <img src="/images/0_N1fmHtI8gmkH_2Vu 1.png" alt="Logo Partenaire" class="h-10">
-            <img src="/images/images-removebg-preview 1.png" alt="Logo Partenaire" class="h-10">
+            <img src="../images/Microsoft-logo_rgb_c-gray 1.png" alt="Logo Microsoft" class="h-10">
+            <img src="../images/logo-facebook-transparent 1.png" alt="Logo Facebook" class="h-10">
+            <img src="../images/pinterest 1.png" alt="Logo Pinterest" class="h-10">
+            <img src="../images/0_N1fmHtI8gmkH_2Vu 1.png" alt="Logo Partenaire" class="h-10">
+            <img src="../images/images-removebg-preview 1.png" alt="Logo Partenaire" class="h-10">
         </div>
     </section>
 
@@ -53,17 +53,17 @@
         <h1 class="text-4xl font-bold text-center text-black">Nos Services</h1>
         <div class="flex flex-row md:grid-cols-3 gap-8 mt-12 px-8 align-center justify-center">
             <article class="text-center p-4 shadow-lg rounded bg-white w-72">
-                <img src="/images/png three.png" alt="Conception Mobile" class="h-20 mx-auto">
+                <img src="../images/png three.png" alt="Conception Mobile" class="h-20 mx-auto">
                 <h2 class="text-2xl font-semibold mt-4">Conception Mobile</h2>
                 <p class="mt-2">Créez des expériences fluides pour vos utilisateurs avec des applications mobiles intuitives et modernes.</p>
             </article>
             <article class="text-center p-4 shadow-lg rounded bg-white w-72">
-                <img src="/images/png one.png" alt="Conception Web" class="h-20 mx-auto">
+                <img src="../images/png one.png" alt="Conception Web" class="h-20 mx-auto">
                 <h2 class="text-2xl font-semibold mt-4">Conception Web</h2>
                 <p class="mt-2">Développez votre présence en ligne avec des sites web interactifs, adaptés à tous les appareils.</p>
             </article>
             <article class="text-center p-4 shadow-lg rounded bg-white w-72">
-                <img src="/images/png two.png" alt="Conception Desktop" class="h-20 mx-auto">
+                <img src="../images/png two.png" alt="Conception Desktop" class="h-20 mx-auto">
                 <h2 class="text-2xl font-semibold mt-4">Conception Desktop</h2>
                 <p class="mt-2">Optimisez vos processus d'entreprise grâce à des logiciels desktop performants et personnalisés.</p>
             </article>
@@ -74,7 +74,7 @@
     <section id="contact_id" class="py-16 bg-white w-full relative">
         <div class="w-10/12 mx-auto relative flex felx-row">
             <div class="w-96 p-12 absolute left-80">
-                <img src="/images/solutech.png" alt="image" class="object-contain w-full h-full relative">
+                <img src="../images/solutech.png" alt="image" class="object-contain w-full h-full relative">
             </div>
             <div class="hk mx-auto relative border-2 border-solid border-gray-100 shadow-lg rounded-xl place-items-end">
                 <form action="" method="POST" class="p-8 flex flex-col w-9/12">
